--- a/Tempo2/FiltersFlyout.xaml
+++ b/Tempo2/FiltersFlyout.xaml
@@ -13,6 +13,6 @@
         </Style>
     </Flyout.FlyoutPresenterStyle>
 
-    <local:Filters IsFlyoutMode="True" />
+    <local:Filters1 IsFlyoutMode="True" />
 
 </Flyout>
