--- a/Tempo2/Filters.xaml
+++ b/Tempo2/Filters.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Tempo.Filters"
+    x:Class="Tempo.Filters1"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Tempo"
